# pokemon-text-game

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSETS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_AND_POKEAPI.md  GAMEPLAY.md  TESTING.md
resources/: pokemons.json
resources/audio/: README.md
resources/data/: moves.json  species.json
resources/sprites/ascii/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+984 more)
resources/sprites/color/: 001.cga  002.cga  003.cga  004.cga  005.cga  006.cga  007.cga  008.cga  009.cga  010.cga  011.cga  012.cga  013.cga  014.cga  015.cga  016.cga  017.cga  018.cga  019.cga  (+1006 more)
scripts/: build_game_data.py  download_sprites.py  generate_ascii_sprites.py  import_pokeapi.py  sprites_to_ascii.py
src/: extra.rs  lib.rs  main.rs
src/app/: audio.rs  input.rs  mod.rs  ui.rs
src/ascii/: color_sprite.rs  mod.rs  sprites.rs
src/audio/: mod.rs
src/battle/: encounter.rs  engine.rs
src/data/: mod.rs
src/game/: assets.rs  battle_ui.rs  mod.rs  overworld.rs  state.rs  theme.rs
src/pokemon/: db.rs  instance.rs  mod.rs  moves.rs  species.rs  stats.rs  types.rs
src/save/: mod.rs
src/util/: mod.rs
src/world/: mod.rs
tests/: integration_adventure.rs
