[package]
name = "pokemon-text-game"
version = "2.0.0"
authors = ["sn99 <siddharthn.099@gmail.com>"]
edition = "2021"
description = "A full-featured terminal Pokemon battle game with ASCII sprites, type effectiveness, and PokeAPI-sourced data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sn99/pokemon-text-game"
keywords = ["pokemon", "tui", "game", "ratatui", "terminal"]
categories = ["games", "command-line-utilities"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17.1"
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
