[package]
name = "pokemon-text-game"
version = "3.2.0"
authors = ["sn99 <siddharthn.099@gmail.com>"]
edition = "2021"
description = "A simplified 2D Pokemon adventure game with real sprites, type-effective battles, and PokeAPI data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sn99/pokemon-text-game"
keywords = ["pokemon", "game", "2d", "macroquad"]
categories = ["games"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
macroquad = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
